// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly when the list of hotspot is static 1`] = `
<div
  className="filter-bar-outer"
>
  <div
    className="filter-bar"
  >
    <div
      className="filter-bar-inner display-flex-center"
    >
      <ForwardRef(Link)
        to={
          {
            "pathname": "/security_hotspots",
            "search": "?id=my-project",
          }
        }
      >
        hotspot.filters.show_all
      </ForwardRef(Link)>
    </div>
  </div>
</div>
`;

exports[`should render correctly: anonymous 1`] = `
<div
  className="filter-bar-outer"
>
  <div
    className="filter-bar"
  >
    <div
      className="filter-bar-inner display-flex-center"
    >
      <div
        className="display-flex-space-between width-100"
      >
        <div
          className="display-flex-center"
        >
          <h3
            className="huge-spacer-right"
          >
            hotspot.filters.title
          </h3>
          <span
            className="spacer-right"
          >
             
            status
             
          </span>
          <Select
            aria-label="hotspot.filters.status"
            className="input-medium big-spacer-right"
            isSearchable={false}
            onChange={[Function]}
            options={
              [
                {
                  "label": "hotspot.filters.status.to_review",
                  "value": "TO_REVIEW",
                },
                {
                  "label": "hotspot.filters.status.acknowledged",
                  "value": "ACKNOWLEDGED",
                },
                {
                  "label": "hotspot.filters.status.fixed",
                  "value": "FIXED",
                },
                {
                  "label": "hotspot.filters.status.safe",
                  "value": "SAFE",
                },
              ]
            }
            value={
              {
                "label": "hotspot.filters.status.to_review",
                "value": "TO_REVIEW",
              }
            }
          />
          <Select
            aria-label="hotspot.filters.period"
            className="input-medium big-spacer-right"
            isSearchable={false}
            onChange={[Function]}
            options={
              [
                {
                  "label": "hotspot.filters.period.since_leak_period",
                  "value": true,
                },
                {
                  "label": "hotspot.filters.period.overall",
                  "value": false,
                },
              ]
            }
            value={
              {
                "label": "hotspot.filters.period.overall",
                "value": false,
              }
            }
          />
        </div>
        <div
          className="display-flex-center"
        >
          <span
            className="little-spacer-right"
          >
            metric.security_hotspots_reviewed.name
          </span>
          <HelpTooltip
            className="big-spacer-right"
            overlay="hotspots.reviewed.tooltip"
          />
          <DeferredSpinner
            loading={false}
          >
            <Measure
              className="spacer-left huge it__hs-review-percentage"
              metricKey="security_hotspots_reviewed"
              metricType="PERCENT"
            />
          </DeferredSpinner>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`should render correctly: logged-in 1`] = `
<div
  className="filter-bar-outer"
>
  <div
    className="filter-bar"
  >
    <div
      className="filter-bar-inner display-flex-center"
    >
      <div
        className="display-flex-space-between width-100"
      >
        <div
          className="display-flex-center"
        >
          <h3
            className="huge-spacer-right"
          >
            hotspot.filters.title
          </h3>
          <span
            className="huge-spacer-right"
          >
            <ButtonToggle
              onCheck={[Function]}
              options={
                [
                  {
                    "label": "hotspot.filters.assignee.assigned_to_me",
                    "value": "me",
                  },
                  {
                    "label": "hotspot.filters.assignee.all",
                    "value": "all",
                  },
                ]
              }
              value="all"
            />
          </span>
          <span
            className="spacer-right"
          >
             
            status
             
          </span>
          <Select
            aria-label="hotspot.filters.status"
            className="input-medium big-spacer-right"
            isSearchable={false}
            onChange={[Function]}
            options={
              [
                {
                  "label": "hotspot.filters.status.to_review",
                  "value": "TO_REVIEW",
                },
                {
                  "label": "hotspot.filters.status.acknowledged",
                  "value": "ACKNOWLEDGED",
                },
                {
                  "label": "hotspot.filters.status.fixed",
                  "value": "FIXED",
                },
                {
                  "label": "hotspot.filters.status.safe",
                  "value": "SAFE",
                },
              ]
            }
            value={
              {
                "label": "hotspot.filters.status.to_review",
                "value": "TO_REVIEW",
              }
            }
          />
          <Select
            aria-label="hotspot.filters.period"
            className="input-medium big-spacer-right"
            isSearchable={false}
            onChange={[Function]}
            options={
              [
                {
                  "label": "hotspot.filters.period.since_leak_period",
                  "value": true,
                },
                {
                  "label": "hotspot.filters.period.overall",
                  "value": false,
                },
              ]
            }
            value={
              {
                "label": "hotspot.filters.period.overall",
                "value": false,
              }
            }
          />
        </div>
        <div
          className="display-flex-center"
        >
          <span
            className="little-spacer-right"
          >
            metric.security_hotspots_reviewed.name
          </span>
          <HelpTooltip
            className="big-spacer-right"
            overlay="hotspots.reviewed.tooltip"
          />
          <DeferredSpinner
            loading={false}
          >
            <Measure
              className="spacer-left huge it__hs-review-percentage"
              metricKey="security_hotspots_reviewed"
              metricType="PERCENT"
            />
          </DeferredSpinner>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`should render correctly: non-project 1`] = `
<div
  className="filter-bar-outer"
>
  <div
    className="filter-bar"
  >
    <div
      className="filter-bar-inner display-flex-center"
    >
      <div
        className="display-flex-space-between width-100"
      >
        <div
          className="display-flex-center"
        >
          <h3
            className="huge-spacer-right"
          >
            hotspot.filters.title
          </h3>
          <span
            className="huge-spacer-right"
          >
            <ButtonToggle
              onCheck={[Function]}
              options={
                [
                  {
                    "label": "hotspot.filters.assignee.assigned_to_me",
                    "value": "me",
                  },
                  {
                    "label": "hotspot.filters.assignee.all",
                    "value": "all",
                  },
                ]
              }
              value="all"
            />
          </span>
          <span
            className="spacer-right"
          >
             
            status
             
          </span>
          <Select
            aria-label="hotspot.filters.status"
            className="input-medium big-spacer-right"
            isSearchable={false}
            onChange={[Function]}
            options={
              [
                {
                  "label": "hotspot.filters.status.to_review",
                  "value": "TO_REVIEW",
                },
                {
                  "label": "hotspot.filters.status.acknowledged",
                  "value": "ACKNOWLEDGED",
                },
                {
                  "label": "hotspot.filters.status.fixed",
                  "value": "FIXED",
                },
                {
                  "label": "hotspot.filters.status.safe",
                  "value": "SAFE",
                },
              ]
            }
            value={
              {
                "label": "hotspot.filters.status.to_review",
                "value": "TO_REVIEW",
              }
            }
          />
          <Select
            aria-label="hotspot.filters.period"
            className="input-medium big-spacer-right"
            isSearchable={false}
            onChange={[Function]}
            options={
              [
                {
                  "label": "hotspot.filters.period.since_leak_period",
                  "value": true,
                },
                {
                  "label": "hotspot.filters.period.overall",
                  "value": false,
                },
              ]
            }
            value={
              {
                "label": "hotspot.filters.period.overall",
                "value": false,
              }
            }
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`should render correctly: on Pull request 1`] = `
<div
  className="filter-bar-outer"
>
  <div
    className="filter-bar"
  >
    <div
      className="filter-bar-inner display-flex-center"
    >
      <div
        className="display-flex-space-between width-100"
      >
        <div
          className="display-flex-center"
        >
          <h3
            className="huge-spacer-right"
          >
            hotspot.filters.title
          </h3>
          <span
            className="spacer-right"
          >
             
            status
             
          </span>
          <Select
            aria-label="hotspot.filters.status"
            className="input-medium big-spacer-right"
            isSearchable={false}
            onChange={[Function]}
            options={
              [
                {
                  "label": "hotspot.filters.status.to_review",
                  "value": "TO_REVIEW",
                },
                {
                  "label": "hotspot.filters.status.acknowledged",
                  "value": "ACKNOWLEDGED",
                },
                {
                  "label": "hotspot.filters.status.fixed",
                  "value": "FIXED",
                },
                {
                  "label": "hotspot.filters.status.safe",
                  "value": "SAFE",
                },
              ]
            }
            value={
              {
                "label": "hotspot.filters.status.to_review",
                "value": "TO_REVIEW",
              }
            }
          />
        </div>
        <div
          className="display-flex-center"
        >
          <span
            className="little-spacer-right"
          >
            metric.security_hotspots_reviewed.name
          </span>
          <HelpTooltip
            className="big-spacer-right"
            overlay="hotspots.reviewed.tooltip"
          />
          <DeferredSpinner
            loading={false}
          >
            <Measure
              className="spacer-left huge it__hs-review-percentage"
              metricKey="new_security_hotspots_reviewed"
              metricType="PERCENT"
            />
          </DeferredSpinner>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`should render correctly: with hotspots reviewed measure 1`] = `
<div
  className="filter-bar-outer"
>
  <div
    className="filter-bar"
  >
    <div
      className="filter-bar-inner display-flex-center"
    >
      <div
        className="display-flex-space-between width-100"
      >
        <div
          className="display-flex-center"
        >
          <h3
            className="huge-spacer-right"
          >
            hotspot.filters.title
          </h3>
          <span
            className="spacer-right"
          >
             
            status
             
          </span>
          <Select
            aria-label="hotspot.filters.status"
            className="input-medium big-spacer-right"
            isSearchable={false}
            onChange={[Function]}
            options={
              [
                {
                  "label": "hotspot.filters.status.to_review",
                  "value": "TO_REVIEW",
                },
                {
                  "label": "hotspot.filters.status.acknowledged",
                  "value": "ACKNOWLEDGED",
                },
                {
                  "label": "hotspot.filters.status.fixed",
                  "value": "FIXED",
                },
                {
                  "label": "hotspot.filters.status.safe",
                  "value": "SAFE",
                },
              ]
            }
            value={
              {
                "label": "hotspot.filters.status.to_review",
                "value": "TO_REVIEW",
              }
            }
          />
          <Select
            aria-label="hotspot.filters.period"
            className="input-medium big-spacer-right"
            isSearchable={false}
            onChange={[Function]}
            options={
              [
                {
                  "label": "hotspot.filters.period.since_leak_period",
                  "value": true,
                },
                {
                  "label": "hotspot.filters.period.overall",
                  "value": false,
                },
              ]
            }
            value={
              {
                "label": "hotspot.filters.period.overall",
                "value": false,
              }
            }
          />
        </div>
        <div
          className="display-flex-center"
        >
          <span
            className="little-spacer-right"
          >
            metric.security_hotspots_reviewed.name
          </span>
          <HelpTooltip
            className="big-spacer-right"
            overlay="hotspots.reviewed.tooltip"
          />
          <DeferredSpinner
            loading={false}
          >
            <CoverageRating
              value="23.30"
            />
            <Measure
              className="spacer-left huge it__hs-review-percentage"
              metricKey="security_hotspots_reviewed"
              metricType="PERCENT"
              value="23.30"
            />
          </DeferredSpinner>
        </div>
      </div>
    </div>
  </div>
</div>
`;
